fix(web): fix typo 週 -> 日

--- a/web/src/app/youtube-channel/youtube-channel.component.html
+++ b/web/src/app/youtube-channel/youtube-channel.component.html
@@ -40,7 +40,7 @@
     </ng-container>
 
     <ng-container matColumnDef="youtubeDailySubs">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>週增</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>日增</th>
       <td
         mat-cell
         *matCellDef="let row"
