--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,4 +1,4 @@
-<hs-navbar (menuClick)="drawer.toggle()"></hs-navbar>
+<hs-header (menuClick)="drawer.toggle()"></hs-header>
 <mat-sidenav-container>
   <mat-sidenav
     #drawer
