--- a/web/src/app/header/_header.theme.scss
+++ b/web/src/app/header/_header.theme.scss
@@ -1,6 +1,6 @@
 @import "~@angular/material/theming";
 
-@mixin navbar-theme($theme) {
+@mixin header-theme($theme) {
   $foreground: map-get($theme, foreground);
   $background: map-get($theme, background);
 
