--- a/web/src/app/settings/settings.component.scss
+++ b/web/src/app/settings/settings.component.scss
@@ -1,30 +1,4 @@
-.spacer {
-  flex: 1 0;
-}
-
-.settings-row {
+.settings {
   padding: 20px;
   margin: 0px;
-}
-
-.tree-row {
-  padding: 0 20px;
-  margin: 0px;
-}
-
-.checkbox-row {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  min-height: 48px;
-}
-
-.navbar {
-  background-color: rgba(0, 0, 0, 0);
-}
-
-.dark {
-  .navbar {
-    background-color: rgba(0, 0, 0, 0);
-  }
 }
