--- a/web/src/app/sidenav/_sidenav.theme.scss
+++ b/web/src/app/sidenav/_sidenav.theme.scss
@@ -13,3 +13,17 @@
     }
   }
 }
+
+@mixin sidenav-typography($config) {
+  .sidenav-container {
+    .info {
+      font-size: mat-font-size($config, button);
+      font-weight: mat-font-weight($config, button);
+    }
+
+    .copyright {
+      font-size: mat-font-size($config, caption);
+      font-weight: mat-font-weight($config, caption);
+    }
+  }
+}
