--- a/web/src/app/settings/settings.component.html
+++ b/web/src/app/settings/settings.component.html
@@ -1,8 +1,7 @@
-<h4 class="settings-row mat-subheading-2">
-  已選取的 VTuber <b>({{ config.selectedVTubers.size }}/{{ count }})</b>：
-</h4>
-
-<div class="tree-row">
+<div class="settings">
+  <h4 class="title">
+    已選取的 VTuber <b>({{ config.selectedVTubers.size }}/{{ count }})</b>：
+  </h4>
   <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
     <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
       <button mat-icon-button disabled></button>
