--- a/web/src/app/youtube-stream/_youtube-stream.theme.scss
+++ b/web/src/app/youtube-stream/_youtube-stream.theme.scss
@@ -17,3 +17,33 @@
     color: mat-color($foreground, secondary-text);
   }
 }
+
+@mixin youtube-stream-typography($config) {
+  .date-label {
+    font-size: mat-font-size($config, title);
+    font-weight: mat-font-weight($config, caption);
+  }
+
+  .updated-at {
+    font-size: mat-font-size($config, caption);
+    font-weight: mat-font-weight($config, caption);
+  }
+
+  .thumbnail {
+    .duration {
+      font-size: mat-font-size($config, caption);
+      font-weight: mat-font-weight($config, body-2);
+    }
+  }
+
+  .title {
+    font-size: mat-font-size($config, body-1);
+    font-weight: mat-font-weight($config, body-1);
+  }
+
+  .time,
+  .viewers {
+    font-size: mat-font-size($config, caption);
+    font-weight: mat-font-weight($config, body-1);
+  }
+}
