feat(web): chart tooltip anchor theming

--- a/web/src/app/charts/_charts.theme.scss
+++ b/web/src/app/charts/_charts.theme.scss
@@ -9,6 +9,10 @@
       fill: mat-color($foreground, secondary-text);
     }
 
+    .tooltip-anchor {
+      fill: mat-color($foreground, secondary-text);
+    }
+
     .gridline-path {
       stroke: mat-color($foreground, divider);
     }
