--- a/web/src/app/header/header.component.html
+++ b/web/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar" fxLayoutAlign="start center">
+<header class="header" fxLayoutAlign="start center">
   <button mat-icon-button (click)="menuClick.emit()">
     <mat-icon svgIcon="menu"></mat-icon>
   </button>
@@ -18,4 +18,4 @@
   <!-- <button mat-icon-button matTooltip="查看全部 VTuber">
     <mat-icon svgIcon="quick_access"></mat-icon>
   </button> -->
-</nav>
+</header>
