--- a/web/src/app/streams-detail/streams-detail.component.html
+++ b/web/src/app/streams-detail/streams-detail.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="stats.length != 0">
+<div class="streams-detail">
   <div class="content" fxLayout="row wrap" fxLayoutAlign="space-between center">
     <a class="title" href="https://youtu.be/{{ stream.id }}">
       {{ stream.title }}
@@ -80,4 +80,4 @@
       [timeline]="true"
     ></hs-area-chart>
   </div>
-</ng-container>
+</div>
