--- a/web/src/app/bilibili-channel/_bilibili-channel.theme.scss
+++ b/web/src/app/bilibili-channel/_bilibili-channel.theme.scss
@@ -1,8 +1,10 @@
 @import "~@angular/material/theming";
 
 @mixin bilibili-channel-typography($config) {
-  .updated-at {
-    font-size: mat-font-size($config, caption);
-    font-weight: mat-font-weight($config, caption);
+  .bilibili-channel {
+    .updated-at {
+      font-size: mat-font-size($config, caption);
+      font-weight: mat-font-weight($config, caption);
+    }
   }
 }
