--- a/web/src/app/bilibili-channel/bilibili-channel.component.scss
+++ b/web/src/app/bilibili-channel/bilibili-channel.component.scss
@@ -1,74 +1,76 @@
-.toolbar {
-  padding: 8px 20px;
-  max-width: 960px;
-  margin: 0 auto;
-}
-
-.spacer {
-  flex: 1 0;
-}
-
-.table-container {
-  overflow-x: scroll;
-}
-
-table {
-  margin: 0 auto;
-}
-
-.profile {
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
-  border: 1px solid rgba(0, 0, 0, 0.12);
-  cursor: pointer;
-  vertical-align: middle;
-  outline: none;
-}
-
-.mat-column-profile {
-  padding-left: 8px;
-}
-
-.mat-column-profile {
-  max-width: 64px;
-  text-align: center;
-}
-
-.mat-column-name {
-  padding-left: 12px;
-  word-break: keep-all;
-}
-
-.mat-footer-cell.mat-column-name {
-  font-family: monospace;
-  padding-left: 12px;
-}
-
-$columns: bilibiliSubs, bilibiliDailySubs, bilibiliWeeklySubs,
-  bilibiliMonthlySubs, bilibiliViews, bilibiliDailyViews, bilibiliWeeklyViews,
-  bilibiliMonthlyViews, youtubeSubs, youtubeDailySubs, youtubeWeeklySubs,
-  youtubeMonthlySubs, youtubeViews, youtubeDailyViews, youtubeWeeklyViews,
-  youtubeMonthlyViews;
-
-@each $columns in $columns {
-  .mat-footer-cell.mat-column-#{$columns},
-  .mat-cell.mat-column-#{$columns} {
-    font-family: monospace;
-    text-align: right;
-    padding-right: 18px;
+.bilibili-channel {
+  .toolbar {
+    padding: 8px 20px;
+    max-width: 960px;
+    margin: 0 auto;
   }
-}
 
-.mat-column-name,
-.mat-column-name.mat-header-cell {
-  text-align: center;
-}
+  .spacer {
+    flex: 1 0;
+  }
 
-.mat-row .mat-cell:last-child {
-  padding-right: 42px;
-}
+  .table-container {
+    overflow-x: scroll;
+  }
 
-.mat-footer-row .mat-footer-cell:last-child {
-  padding-right: 42px;
+  table {
+    margin: 0 auto;
+  }
+
+  .profile {
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    cursor: pointer;
+    vertical-align: middle;
+    outline: none;
+  }
+
+  .mat-column-profile {
+    padding-left: 8px;
+  }
+
+  .mat-column-profile {
+    max-width: 64px;
+    text-align: center;
+  }
+
+  .mat-column-name {
+    padding-left: 12px;
+    word-break: keep-all;
+  }
+
+  .mat-footer-cell.mat-column-name {
+    font-family: monospace;
+    padding-left: 12px;
+  }
+
+  $columns: bilibiliSubs, bilibiliDailySubs, bilibiliWeeklySubs,
+    bilibiliMonthlySubs, bilibiliViews, bilibiliDailyViews, bilibiliWeeklyViews,
+    bilibiliMonthlyViews, youtubeSubs, youtubeDailySubs, youtubeWeeklySubs,
+    youtubeMonthlySubs, youtubeViews, youtubeDailyViews, youtubeWeeklyViews,
+    youtubeMonthlyViews;
+
+  @each $columns in $columns {
+    .mat-footer-cell.mat-column-#{$columns},
+    .mat-cell.mat-column-#{$columns} {
+      font-family: monospace;
+      text-align: right;
+      padding-right: 18px;
+    }
+  }
+
+  .mat-column-name,
+  .mat-column-name.mat-header-cell {
+    text-align: center;
+  }
+
+  .mat-row .mat-cell:last-child {
+    padding-right: 42px;
+  }
+
+  .mat-footer-row .mat-footer-cell:last-child {
+    padding-right: 42px;
+  }
 }
