--- a/web/src/app/header/_header.theme.scss
+++ b/web/src/app/header/_header.theme.scss
@@ -4,7 +4,7 @@
   $foreground: map-get($theme, foreground);
   $background: map-get($theme, background);
 
-  .navbar {
+  .header {
     background-color: mat-color($background, card);
     border-bottom: solid 1px mat-color($foreground, divider);
   }
