--- a/web/src/app/vtubers-detail/vtubers-detail.component.html
+++ b/web/src/app/vtubers-detail/vtubers-detail.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="vtuber">
+<div class="vtubers-detail">
   <div class="content" fxLayout="row wrap" fxLayoutAlign="space-between center">
     <div class="info" fxFlex="40" fxFlex.lt-sm="100">
       <img class="profile" src="/assets/profiles/{{ vtuber.id }}.jpg" />
@@ -78,4 +78,4 @@
       ></hs-area-chart>
     </div>
   </div>
-</ng-container>
+</div>
