--- a/web/src/app/vtubers-detail/vtubers-detail.component.scss
+++ b/web/src/app/vtubers-detail/vtubers-detail.component.scss
@@ -1,31 +1,33 @@
-.content {
-  padding: 32px;
-}
-
-.info {
-  text-align: center;
-
-  .name {
-    padding: 16px 0;
+.vtubers-detail {
+  .content {
+    padding: 32px;
   }
 
-  .profile {
-    width: 192px;
-    height: 192px;
-    border-radius: 50%;
-  }
-}
-
-.number {
-  height: 192px;
-  text-align: center;
-}
-
-.chart {
-  height: 250px;
-
-  .caption {
+  .info {
     text-align: center;
-    padding-bottom: 24px;
+
+    .name {
+      padding: 16px 0;
+    }
+
+    .profile {
+      width: 192px;
+      height: 192px;
+      border-radius: 50%;
+    }
+  }
+
+  .number {
+    height: 192px;
+    text-align: center;
+  }
+
+  .chart {
+    height: 250px;
+
+    .caption {
+      text-align: center;
+      padding-bottom: 24px;
+    }
   }
 }
