--- a/web/src/app/youtube-channel/_youtube-channel.theme.scss
+++ b/web/src/app/youtube-channel/_youtube-channel.theme.scss
@@ -1,8 +1,10 @@
 @import "~@angular/material/theming";
 
 @mixin youtube-channel-typography($config) {
-  .updated-at {
-    font-size: mat-font-size($config, caption);
-    font-weight: mat-font-weight($config, caption);
+  .youtube-channel {
+    .updated-at {
+      font-size: mat-font-size($config, caption);
+      font-weight: mat-font-weight($config, caption);
+    }
   }
 }
