--- a/web/src/app/youtube-channel/youtube-channel.component.html
+++ b/web/src/app/youtube-channel/youtube-channel.component.html
@@ -1,168 +1,170 @@
-<div class="toolbar" fxLayout="row" fxLayoutAlign="start center">
-  <span class="spacer"></span>
-  <div class="updated-at">更新于 {{ updatedAt | date: "MM/dd HH:mm" }}</div>
-</div>
-<div class="table-container">
-  <table
-    mat-table
-    [dataSource]="dataSource"
-    matSort
-    matSortActive="youtubeSubs"
-    matSortDirection="desc"
-    matSortDisableClear
-  >
-    <ng-container matColumnDef="profile">
-      <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let row">
-        <img
-          class="profile"
-          src="/assets/thumbnail/{{ row.id }}.jpg"
-          [routerLink]="['/vtuber', row.id]"
-        />
-      </td>
-      <td mat-footer-cell *matFooterCellDef></td>
-    </ng-container>
+<div class="youtube-channel">
+  <div class="toolbar" fxLayout="row" fxLayoutAlign="start center">
+    <span class="spacer"></span>
+    <div class="updated-at">更新于 {{ updatedAt | date: "MM/dd HH:mm" }}</div>
+  </div>
+  <div class="table-container">
+    <table
+      mat-table
+      [dataSource]="dataSource"
+      matSort
+      matSortActive="youtubeSubs"
+      matSortDirection="desc"
+      matSortDisableClear
+    >
+      <ng-container matColumnDef="profile">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let row">
+          <img
+            class="profile"
+            src="/assets/thumbnail/{{ row.id }}.jpg"
+            [routerLink]="['/vtuber', row.id]"
+          />
+        </td>
+        <td mat-footer-cell *matFooterCellDef></td>
+      </ng-container>
 
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>名稱</th>
-      <td mat-cell *matCellDef="let row">{{ findVTuber(row.id).name }}</td>
-      <td mat-footer-cell *matFooterCellDef>總計</td>
-    </ng-container>
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>名稱</th>
+        <td mat-cell *matCellDef="let row">{{ findVTuber(row.id).name }}</td>
+        <td mat-footer-cell *matFooterCellDef>總計</td>
+      </ng-container>
 
-    <ng-container matColumnDef="youtubeSubs">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>YouTube 訂閱</th>
-      <td mat-cell *matCellDef="let row">
-        {{ row.youtubeStats.subs | number }}
-      </td>
-      <td mat-footer-cell *matFooterCellDef>
-        {{ totalYoutubeSubs | number }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="youtubeSubs">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>YouTube 訂閱</th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.youtubeStats.subs | number }}
+        </td>
+        <td mat-footer-cell *matFooterCellDef>
+          {{ totalYoutubeSubs | number }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="youtubeDailySubs">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>日增</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-        [coloredNumber]="row.youtubeStats.dailySubs"
-      >
-        {{ row.youtubeStats.dailySubs | number }}
-      </td>
-      <td
-        mat-footer-cell
-        *matFooterCellDef
-        [coloredNumber]="totalYoutubeDailySubs"
-      >
-        {{ totalYoutubeDailySubs | number }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="youtubeDailySubs">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>日增</th>
+        <td
+          mat-cell
+          *matCellDef="let row"
+          [coloredNumber]="row.youtubeStats.dailySubs"
+        >
+          {{ row.youtubeStats.dailySubs | number }}
+        </td>
+        <td
+          mat-footer-cell
+          *matFooterCellDef
+          [coloredNumber]="totalYoutubeDailySubs"
+        >
+          {{ totalYoutubeDailySubs | number }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="youtubeWeeklySubs">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>週增</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-        [coloredNumber]="row.youtubeStats.weeklySubs"
-      >
-        {{ row.youtubeStats.weeklySubs | number }}
-      </td>
-      <td
-        mat-footer-cell
-        *matFooterCellDef
-        [coloredNumber]="totalYoutubeWeeklySubs"
-      >
-        {{ totalYoutubeWeeklySubs | number }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="youtubeWeeklySubs">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>週增</th>
+        <td
+          mat-cell
+          *matCellDef="let row"
+          [coloredNumber]="row.youtubeStats.weeklySubs"
+        >
+          {{ row.youtubeStats.weeklySubs | number }}
+        </td>
+        <td
+          mat-footer-cell
+          *matFooterCellDef
+          [coloredNumber]="totalYoutubeWeeklySubs"
+        >
+          {{ totalYoutubeWeeklySubs | number }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="youtubeMonthlySubs">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>月增</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-        [coloredNumber]="row.youtubeStats.monthlySubs"
-      >
-        {{ row.youtubeStats.monthlySubs | number }}
-      </td>
-      <td
-        mat-footer-cell
-        *matFooterCellDef
-        [coloredNumber]="totalYoutubeMonthlySubs"
-      >
-        {{ totalYoutubeMonthlySubs | number }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="youtubeMonthlySubs">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>月增</th>
+        <td
+          mat-cell
+          *matCellDef="let row"
+          [coloredNumber]="row.youtubeStats.monthlySubs"
+        >
+          {{ row.youtubeStats.monthlySubs | number }}
+        </td>
+        <td
+          mat-footer-cell
+          *matFooterCellDef
+          [coloredNumber]="totalYoutubeMonthlySubs"
+        >
+          {{ totalYoutubeMonthlySubs | number }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="youtubeViews">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>YouTube 觀看</th>
-      <td mat-cell *matCellDef="let row">
-        {{ row.youtubeStats.views | number }}
-      </td>
-      <td mat-footer-cell *matFooterCellDef>
-        {{ totalYoutubeViews | number }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="youtubeViews">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>YouTube 觀看</th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.youtubeStats.views | number }}
+        </td>
+        <td mat-footer-cell *matFooterCellDef>
+          {{ totalYoutubeViews | number }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="youtubeDailyViews">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>日增</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-        [coloredNumber]="row.youtubeStats.dailyViews"
-      >
-        {{ row.youtubeStats.dailyViews | number }}
-      </td>
-      <td
-        mat-footer-cell
-        *matFooterCellDef
-        [coloredNumber]="totalYoutubeDailyViews"
-      >
-        {{ totalYoutubeDailyViews | number }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="youtubeDailyViews">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>日增</th>
+        <td
+          mat-cell
+          *matCellDef="let row"
+          [coloredNumber]="row.youtubeStats.dailyViews"
+        >
+          {{ row.youtubeStats.dailyViews | number }}
+        </td>
+        <td
+          mat-footer-cell
+          *matFooterCellDef
+          [coloredNumber]="totalYoutubeDailyViews"
+        >
+          {{ totalYoutubeDailyViews | number }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="youtubeWeeklyViews">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>週增</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-        [coloredNumber]="row.youtubeStats.weeklyViews"
-      >
-        {{ row.youtubeStats.weeklyViews | number }}
-      </td>
-      <td
-        mat-footer-cell
-        *matFooterCellDef
-        [coloredNumber]="totalYoutubeWeeklyViews"
-      >
-        {{ totalYoutubeWeeklyViews | number }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="youtubeWeeklyViews">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>週增</th>
+        <td
+          mat-cell
+          *matCellDef="let row"
+          [coloredNumber]="row.youtubeStats.weeklyViews"
+        >
+          {{ row.youtubeStats.weeklyViews | number }}
+        </td>
+        <td
+          mat-footer-cell
+          *matFooterCellDef
+          [coloredNumber]="totalYoutubeWeeklyViews"
+        >
+          {{ totalYoutubeWeeklyViews | number }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="youtubeMonthlyViews">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>月增</th>
-      <td
-        mat-cell
-        *matCellDef="let row"
-        [coloredNumber]="row.youtubeStats.monthlyViews"
-      >
-        {{ row.youtubeStats.monthlyViews | number }}
-      </td>
-      <td
-        mat-footer-cell
-        *matFooterCellDef
-        [coloredNumber]="totalYoutubeMonthlyViews"
-      >
-        {{ totalYoutubeMonthlyViews | number }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="youtubeMonthlyViews">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>月增</th>
+        <td
+          mat-cell
+          *matCellDef="let row"
+          [coloredNumber]="row.youtubeStats.monthlyViews"
+        >
+          {{ row.youtubeStats.monthlyViews | number }}
+        </td>
+        <td
+          mat-footer-cell
+          *matFooterCellDef
+          [coloredNumber]="totalYoutubeMonthlyViews"
+        >
+          {{ totalYoutubeMonthlyViews | number }}
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr
-      mat-row
-      *matRowDef="let row; columns: displayedColumns"
-      [hidden]="hideRows.includes(row.id)"
-    ></tr>
-    <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
-  </table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: displayedColumns"
+        [hidden]="hideRows.includes(row.id)"
+      ></tr>
+      <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+    </table>
+  </div>
 </div>
