--- a/web/src/app/sidenav/sidenav.component.html
+++ b/web/src/app/sidenav/sidenav.component.html
@@ -4,6 +4,7 @@
       id="youtube-channel-button"
       mat-list-item
       routerLink="/youtube-channel"
+      routerLinkActive="active"
       (click)="buttonClick.emit()"
     >
       <mat-icon mat-list-icon svgIcon="youtube"></mat-icon>
@@ -13,6 +14,7 @@
       id="bilibili-channel-button"
       mat-list-item
       routerLink="/bilibili-channel"
+      routerLinkActive="active"
       (click)="buttonClick.emit()"
     >
       <mat-icon mat-list-icon svgIcon="bilibili"></mat-icon>
@@ -22,6 +24,7 @@
       id="youtube-stream-button"
       mat-list-item
       routerLink="/youtube-stream"
+      routerLinkActive="active"
       (click)="buttonClick.emit()"
     >
       <mat-icon mat-list-icon svgIcon="stream"></mat-icon>
@@ -31,6 +34,7 @@
       id="settings-button"
       mat-list-item
       routerLink="/settings"
+      routerLinkActive="active"
       (click)="buttonClick.emit()"
     >
       <mat-icon mat-list-icon svgIcon="tune"></mat-icon>
