--- a/web/src/app/youtube-stream/youtube-stream.component.html
+++ b/web/src/app/youtube-stream/youtube-stream.component.html
@@ -38,7 +38,7 @@
         </div>
         <div
           class="viewers"
-          [ngClass]="{ red: !stream.end }"
+          [ngClass]="{ current: !stream.end }"
           fxLayout="row"
           fxLayoutAlign="start center"
         >
